# speech2whisper_mlx

./: .gitignore  LICENSE  README.md  audio_core.pyx  mlx-audio.py  pyproject.toml  requirements.txt  setup.py
