[project]
name = "test-sound"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cython>=3.0.11",
    "ipython>=8.31.0",
    "mlx-whisper>=0.4.1",
    "setuptools>=75.8.0",
    "sounddevice>=0.5.1",
    "webrtcvad>=2.0.10",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
